[package]
name = "basic"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]

[dependencies]
rand = "*"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.5"
actix-web = { git = "https://github.com/actix/actix-web.git" }
# actix-web = { path = "../../actix-web" }

[profile.release]
debug = true
